fix: reduce padding on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -196,6 +196,7 @@ a:hover:has(code) {
 @media (width < 600px) {
 	body {
 		word-break: break-all;
+		padding: 0 5vw;
 	}
 }
 
